# ai_toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AGENT_ONBOARDING.md  COMMANDS.md
rubrics/: docs.json  ui.json
src/research_toolkit/: __main__.py
src/research_toolkit/adapters/: __init__.py  cli.py  command_spec.py  presenters.py
src/research_toolkit/application/: __init__.py  ports.py
src/research_toolkit/application/use_cases/: __init__.py  doctor_checks.py  ingest_resource.py  list_resources.py  query_library.py  reindex.py  review_artifact.py  run_search.py  summarize_resource.py
src/research_toolkit/domain/: __init__.py  entities.py  review_entities.py  value_objects.py
src/research_toolkit/infrastructure/: __init__.py  clock.py  config.py  filesystem_store.py  gemini_multimodal_provider.py  gemini_provider.py  html_snapshotter.py  jsonl_indexer.py  logger.py  ollama_provider.py  openai_provider.py  web_search_provider.py
tests/: conftest.py  test_review.py  test_review_integration.py
tests/fixtures/: README.md  sample-report.md
